Refactored UI class

--- a/src/main/resources/static/text.html
+++ b/src/main/resources/static/text.html
@@ -2,4 +2,6 @@
     Turn all of the lights <font color=green>green</font> to win!
     <br><br>
     Clicking on a light toggles its colour as well as that of all of its neighbours.
+    <br><br>
+    Use the slider to set the board size for your next game!
 </html>
